# enum-experiment

./: CMakeLists.txt  README.md
include/: enum_experiment.h
source/: main.cpp
